lib_Math documentation

--- a/docs/math/_posts/1970-01-01-between.md
+++ b/docs/math/_posts/1970-01-01-between.md
@@ -1,27 +1,73 @@
 ---
-title: Core.
+title: Math.between(x,y,z)
 layout: post
 ---
 # {{ page.title }} 
 
-Desc.
+Test for inequality `x <= y <= z`
 
 ---
 
 ## Parameters
 
-### p1
+### x
 
-p1 desc.
+Lower bound.
+
+### y
+
+Value to check.
+
+### z
+
+Upper bound.
 
 ---
 ## Return Value
 
-return value desc.
+Determines weather a value is between two other values.  The value can be either a number or a string.
+
+For numbers, they are compared as in math.
+
+{% highlight ahk %}
+Math.Between(-5, 0, 5) ; True
+Math.Between(-20, 5, -10) ; False
+{% endhighlight %}
+
+
+AutoHotkey also allows string comparisons.  Here we use lexicographical comparisons.  One simplification of this is "alphabetical order".  As long as there are only letters of one case (upper or lower) this will hold true.  If you have lib_String included, you can call the `toLower` and `toUpper` methods of a string to force this.
+
+{% highlight ahk %}
+Math.Between("a", "e", "f") ; True
+Math.Between("beginning", "center", "end") ; True
+{% endhighlight %}
+
+Note that we use the inclusive comparison, so that the following are true.
+
+{% highlight ahk %}
+Math.Between(10, 10, 10)
+Math.Between("r", "r", "r")
+{% endhighlight %}
+
 
 ---
 ## Examples:
 
 {% highlight ahk %}
+
+InputBox number,, Give me a number between 3 and 30
+If Math.Between(3, number, 30)
+    MsgBox Good job!
+else
+    MsgBox Better luck next time...
+
+InputBox letter,, Give me a letter
+
+If Math.between("a", letter.toLower(), "m")
+    MsgBox That's in the first half of the alphabet.
+else if Math.between("n", letter.toLower(), "z")
+    MsgBox That's in the second half of the alphabet.
+else
+    MsgBox Try again with a letter between A and Z
 
 {% endhighlight %}
