--- a/docs/math/_posts/1970-01-01-hex.md
+++ b/docs/math/_posts/1970-01-01-hex.md
@@ -1,27 +1,30 @@
 ---
-title: Core.
+title: Math.hex(n)
 layout: post
 ---
 # {{ page.title }} 
 
-Desc.
+Convert number to base 16.
+
+See [Math.changeBase](changeBase.html).
 
 ---
 
 ## Parameters
 
-### p1
+### n
 
-p1 desc.
+Number to convert.
+
 
 ---
 ## Return Value
 
-return value desc.
+The base 16 representation of `n`.
 
 ---
 ## Examples:
 
 {% highlight ahk %}
-
+MsgBox % Math.hex(255) ; FF
 {% endhighlight %}
