--- a/docs/math/_posts/1970-01-01-max.md
+++ b/docs/math/_posts/1970-01-01-max.md
@@ -1,18 +1,18 @@
 ---
-title: Core.
+title: Math.max(x, y = "")
 layout: post
 ---
 # {{ page.title }} 
 
-Desc.
+Returns the largest of two items, or a list of items.
 
 ---
 
 ## Parameters
 
-### p1
 
-p1 desc.
+{% include maxmin.md %}
+
 
 ---
 ## Return Value
@@ -23,5 +23,14 @@ return value desc.
 ## Examples:
 
 {% highlight ahk %}
+
+#Include <lib_core>
+
+Items := [3, 70, 3, 64, 17]
+
+Names := ["Andrew", "Aaron", "Adam"]
+
+MsgBox % Math.Max(Items) ; 70
+MsgBox % Math.Max(Names) ; Andrew
 
 {% endhighlight %}
