--- a/docs/math/_posts/1970-01-01-min.md
+++ b/docs/math/_posts/1970-01-01-min.md
@@ -1,18 +1,17 @@
 ---
-title: Core.
+title: Math.min(x, y = "")
 layout: post
 ---
 # {{ page.title }} 
 
-Desc.
+Returns the smallest of two items, or a list of items.
 
 ---
 
 ## Parameters
 
-### p1
+{% include maxmin.md %}
 
-p1 desc.
 
 ---
 ## Return Value
@@ -23,5 +22,13 @@ return value desc.
 ## Examples:
 
 {% highlight ahk %}
+#Include <lib_core>
+
+Items := [3, 70, 3, 64, 17]
+
+Names := ["Andrew", "Aaron", "Adam"]
+
+MsgBox % Math.Min(Items) ; 3
+MsgBox % Math.Min(Names) ; Aaron
 
 {% endhighlight %}
