--- a/docs/math/_posts/1970-01-01-oct.md
+++ b/docs/math/_posts/1970-01-01-oct.md
@@ -1,27 +1,29 @@
 ---
-title: Core.
+title: Math.oct(n)
 layout: post
 ---
 # {{ page.title }} 
 
-Desc.
+
+Convert number to base 8.
 
 ---
 
 ## Parameters
 
-### p1
+### n
 
-p1 desc.
+Number to convert.
+
 
 ---
 ## Return Value
 
-return value desc.
+The base 8 representation of `n`.
 
 ---
 ## Examples:
 
 {% highlight ahk %}
-
+MsgBox % Math.oct(64) ; 100
 {% endhighlight %}
