--- a/docs/math/_posts/1970-01-01-xor.md
+++ b/docs/math/_posts/1970-01-01-xor.md
@@ -1,27 +1,61 @@
 ---
-title: Core.
+title: Math.xor(a, b)
 layout: post
 ---
 # {{ page.title }} 
 
-Desc.
+Text for exclusive or.
 
 ---
 
 ## Parameters
 
-### p1
+### a
 
-p1 desc.
+Any value.
+
+
+### b
+
+Any value.
+
+---
+
+## Explanation
+
+XOR (short for eXclusive OR) means true when A or B, but not both.  Here are some examples.
+
+{% highlight ahk %}
+Math.xor(true, false) ; true
+Math.xor(false, false) ; false
+Math.xor(true, true) ; false
+{% endhighlight %}
+
 
 ---
 ## Return Value
 
-return value desc.
+Either true or false.
 
 ---
 ## Examples:
 
 {% highlight ahk %}
+#Include <lib_core>
 
+Gui, Add, Text,, Fill in one or the other
+Gui, Add, Edit, vField1
+Gui, Add, Edit, vField2
+Gui, Add, Button,, Go
+Gui, Show
+return
+
+ButtonGo:
+Gui, Submit
+If Math.xor(Field1, Field2)
+    MsgBox Good job following instructions!
+else
+    MsgBox Consider reading up on exclusive or
+
+ExitApp
 {% endhighlight %}
