--- a/docs/math/_posts/1970-01-01-fromHex.md
+++ b/docs/math/_posts/1970-01-01-fromHex.md
@@ -1,27 +1,34 @@
 ---
-title: Core.
+title: Core.Math.fromHex(hex)
 layout: post
 ---
 # {{ page.title }} 
 
-Desc.
+Converts a hexadecimal string into an integer.
 
 ---
 
 ## Parameters
 
-### p1
+### hex
 
-p1 desc.
+The string to be parsed.  
 
 ---
 ## Return Value
 
-return value desc.
+An integer representation of the hex.
 
----
+----
 ## Examples:
 
 {% highlight ahk %}
+#Include <lib_core>
+url := "youtube.com/results?search_query=ac%2Fdc"
 
+esc := url.match("%[0-9a-f]{2}", "i")
+code := Math.fromHex(esc.slice(2))
+StringReplace, url, url, %esc%, % Chr(code)
+
+MsgBox % url ; youtube.com/results?search_query=ac/dc
 {% endhighlight %}
