updated core.cpu docs

--- a/docs/core/_posts/1970-01-01-cpu.md
+++ b/docs/core/_posts/1970-01-01-cpu.md
@@ -1,27 +1,27 @@
 ---
-title: Core.
+title: Core.CPU
 layout: post
 ---
 # {{ page.title }} 
 
-Desc.
+Incomplete.
 
 ---
 
 ## Parameters
 
-### p1
-
-p1 desc.
+None.
 
 ---
 ## Return Value
 
-return value desc.
+Incomplete, please check back later.
 
 ---
 ## Examples:
 
 {% highlight ahk %}
+
+; TODO: Insert code here.
 
 {% endhighlight %}
